--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.44.4",
+    "@tanstack/react-query": "^5.51.11",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
