--- a/client/package.json
+++ b/client/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.44.4",
     "@tanstack/react-query": "^5.51.11",
+    "@tanstack/react-table": "^8.19.3",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.25.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
