--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@tanstack/react-table": "^8.19.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-markdown": "^9.0.1",
     "react-router-dom": "^6.25.1",
     "uuid": "^10.0.0"
   },
