--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@supabase/supabase-js": "^2.44.4",
     "@tanstack/react-query": "^5.51.11",
     "@tanstack/react-table": "^8.19.3",
+    "openai": "^4.53.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-markdown": "^9.0.1",
