--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "nodemon": "^3.1.4",
+    "openai": "^4.53.2",
     "ts-node": "^10.9.2"
   },
   "devDependencies": {
