--- a/server/package.json
+++ b/server/package.json
@@ -12,13 +12,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@instructor-ai/instructor": "^1.5.0",
     "@supabase/supabase-js": "^2.44.4",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "nodemon": "^3.1.4",
-    "openai": "^4.53.2",
-    "ts-node": "^10.9.2"
+    "openai": "^4.54.0",
+    "ts-node": "^10.9.2",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
