--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,7 @@
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.21",
     "@types/node": "^20.14.12",
+    "supabase": "^1.187.10",
     "typescript": "^5.5.4"
   }
 }
