--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "react-syntax-highlighter": "^15.5.0",
     "react-textarea-autosize": "^8.5.3",
     "rehype-katex": "^7.0.0",
+    "rehype-mathjax": "^6.0.0",
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.0",
     "remark-math": "^6.0.0",
