--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -24,4 +24,4 @@ jobs:
           firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_DEEPCARDS_432519 }}
           channelId: live
           projectId: deepcards-432519
-          entryPoint: './client' # Specify the client directory as the entry point
+          entryPoint: './client'
