--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -29,4 +29,4 @@ jobs:
           repoToken: ${{ secrets.GITHUB_TOKEN }}
           firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_DEEPCARDS_432519 }}
           projectId: deepcards-432519
-          entryPoint: './client' # Specify the client directory as the entry point
+          entryPoint: './client'
