--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,61 @@
-env
+# Environment files
 .env
-node_modules
-.DS_Store
-__pycache__
+.env.local
+.env.*.local
 
+# Dependencies
+node_modules
+package-lock.json
+yarn.lock
+
+# Build outputs
+dist
+build
+out
+
+# Logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Operating System Files
+.DS_Store
+Thumbs.db
+
+# IDE and Editor Files
+.idea
+.vscode
+*.swp
+*.swo
+.history
+
+# TypeScript
+*.tsbuildinfo
+
+# Testing
+coverage
+
+# Temporary files
+*.tmp
+*.temp
+
+# Python
+__pycache__
+*.pyc
+*.pyo
+*.pyd
+.Python
+env/
+venv/
+ENV/
+
+# Misc
+.cache
+.project
+.settings
+.tmproj
+*.esproj
+nbproject
+*.sublime-project
+*.sublime-workspace
